--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <body>
     
 <!-- Cabeçalho com navegação principal -->
-<header class="header" id="header">
+<header class="header" id="header" class="w-full">
     <nav class="nav container">
         <!-- Logo do site -->
-        <a href="#" class="nav__logo">
+        <a href="#" class="nav__logo" class="w-full" >
             Karina Cristina Prim<i class='bx bxs-home-alt-2'></i>
         </a>
         <!-- Menu de navegação -->
@@ -41,7 +41,7 @@
                     </a>
                 </li>    
 
-                <li class="nav__item">
+                <li class="nav__item" class="w-full">
                     <a href="#popular" class="nav__link">
                         <i class='bx bx-award' ></i>
                         <button class="nav__button" style=" background: linear-gradient(45deg, #feba00, #c77313); color: white; border-radius: 10px; padding: 10px 20px; border: none;">Casas</button>
